[package]
name = "nix2sbom"
version = "0.0.0-placeholder-version"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

lazy_static = "1.4"
log = "0.4"
simple-logging = "2.0"
regex = "1.9"

serde-cyclonedx = "0.8"

chrono = { version = "0.4.23", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }

