[package]
name = "nix2sbom"
version = "0.0.0-placeholder-version"
edition = "2021"

[lib]

[[bin]]
name = "create-integration-test"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

anyhow = "1"

serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }

uuid = { version = "1.10", features = ["v4"] }
lazy_static = "1.4"
log = "0.4"
simple-logging = "2.0"
regex = "1.9"

serde-spdx = "0.9"
serde-cyclonedx = "0.9"

chrono = { version = ">=0.4.20", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }

[dev-dependencies]
rstest = "0.23"
